# libakashic

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  libakashic.pc.in
src/: .gitignore  Makefile.am  aks_archive.c  aks_enums.c.template  aks_enums.h  aks_file.c  aks_file.h  aks_file_enumerator.c  aks_file_enumerator.h  aks_file_iface.c  aks_file_info.c  aks_file_info.h  aks_file_node.c  aks_file_private.h  aks_stream.c  aks_stream.h  libakashic.h
test/: .gitignore  Makefile.am  test.c  test1.test
